# communication_broker

./: .gitignore  Makefile  README.md
Protocol/: 1-Connections-Login.txt  2-Close-Disconnect.txt  3- Subscribe.txt  4- Unsubscribe.txt
api-js/: sample.html  sample_client.html
api-js/css/: sample.css
api-js/js/: sample.js
api-js/lib/: com-broker-1-0.js  stomp-api-1-0.js
api-python/: com_broker.py  sample.py
cert/: cert.pem  dhdummy.pem  dhkey.pem  dummy.crt  dummy.csr  dummy.key  key.pem  server.crt  server.csr  server.key  server.orig.key
dashboard/: .angulardoc.json  README.md  angular.json  package-lock.json  package.json
dashboard/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts
dashboard/src/app/dialog-logon/: dialog-logon.component.css  dialog-logon.component.html  dialog-logon.component.spec.ts  dialog-logon.component.ts
dashboard/src/app/dialog-yesno/: dialog-yesno.component.css  dialog-yesno.component.html  dialog-yesno.component.spec.ts  dialog-yesno.component.ts
dashboard/src/app/login-form/: login-form.component.css  login-form.component.html  (+1 more)
diagrams/: class-dgrm.uxf  methods.txt
src/: CMakeLists.txt  README.MD  http.cpp  jomt_util.cpp  jomt_util.hpp  main.cpp  ntwrk.h  ntwrk.hpp  ntwrk_basic.cpp  stomp_protocol.cpp  stomp_protocol.hpp  stomp_server.cpp  stomp_server.hpp  stomp_server_proccess.cpp  stomp_server_send.cpp  stomp_session.cpp  stomp_session.hpp  stomp_subscription.cpp  stomp_subscription.hpp  tcp.cpp  tcp.hpp  tcpcnx.cpp  tcpserver.cpp  ws.hpp  wscnx.cpp  wsserver.cpp
(+11 files in other folders)
